--- a/docker/udemy_course/realworld-docker/docker-compose.yml
+++ b/docker/udemy_course/realworld-docker/docker-compose.yml
@@ -3,4 +3,8 @@ version: '3'
 services:
         api:
            build: ./api
-                
+           command: npm run start
+           ports:
+            - "3000:3000"
+           environment:
+            - PORT=3000
